--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="388.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="361.0" prefWidth="564.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
-      <Label text="Seller Registration">
+      <Label alignment="TOP_LEFT" prefHeight="39.0" prefWidth="295.0" text=" Seller Registration">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -20,15 +20,18 @@
          </padding>
       </Label>
       <ToolBar prefHeight="40.0" prefWidth="200.0">
-        <items>
+         <items>
           <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
-        </items>
+         </items>
       </ToolBar>
       <TableView fx:id="tableViewSeller" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
+          <TableColumn fx:id="tableColumnId" prefWidth="48.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="82.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="82.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="103.0" text="Birth Date" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="101.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="63.0" />
             <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
         </columns>
       </TableView>
